fixed offcenter

--- a/src/composition/Dashboard/Dashboard.css
+++ b/src/composition/Dashboard/Dashboard.css
@@ -7,6 +7,7 @@
     flex-direction: column;
     background-repeat: no-repeat;
     align-items: center; 
+    align-self: center;
     justify-content: center;;
 }
 
@@ -14,7 +15,7 @@
 
     display: flex;
     flex-direction: column;
-    align-items: center;
+    /* justify-self: center; */
     background-color: #ece8e8fb;
     min-height: 350px;
     width: 100%;
@@ -37,7 +38,7 @@ box-shadow: 0px 4px 3px #36424b;  */
 }
 .li-date:hover {
     cursor: pointer;
-    border: 5px solid rgb(83, 82, 82);
+    /* border: 5px solid rgb(83, 82, 82); */
     /* transform: scale(1.2) perspective(1px); */
     background-color: #ad4141fb;
 }
@@ -50,7 +51,7 @@ box-shadow: 0px 4px 3px #36424b;  */
     background-position: center;
     font-size: 20px;
     position: relative;
-    min-height: 200px;
+    height: calc(50px + 5vw);
     max-width: 100%;
     padding: 20px;
     background-repeat: no-repeat;
@@ -61,6 +62,7 @@ box-shadow: 0px 4px 3px #36424b;  */
     flex-direction: column;
     justify-content: center;
     align-content: center;
+    align-self: center;
     width: 100%;
     min-width: 200px;
     padding: 10px;
@@ -203,6 +205,17 @@ box-shadow: 0px 4px 3px #36424b;  */
     .dashboard__date {
         margin: auto;
         
+    }
+    .calendar_container {
+        display: flex;
+        flex-direction: column;
+        align-self: center;
+    }
+
+    .li-date {
+        display: flex;
+        flex-direction: column;
+        align-self: center;
     }
 
     .logo__dashboard {
